# TC-CNC-AI-TP

./: BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  new_generate_synthetic.py  old_generate_synthetic.py  temp.txt  temp_find.cmake  vcpkg.json
ai/: model_card.schema.json
app/: CMakeLists.txt
app/cmake/: run_windeployqt.cmake  windeployqt_install.cmake.in
app/include/app/: BuildInfo.h.in  ToolpathSettingsWidget.h
app/src/: ToolpathSettingsWidget.cpp  main.cpp
ci/: deps_policy.json
ci/scripts/: check_dependencies.py
common/: CMakeLists.txt
common/include/common/: Enforce.h  Units.h  log.h  logging.h  math.h  units.h
common/src/: logging.cpp  math.cpp
docs/: BUILD_DOCTOR.md  DATASET_V2.md  MODEL_CARD.md  OCL_WINDOWS.md  PACKAGING_WINDOWS.md  PERF_NOTES.md  QA_CHECKLIST.md  SMOKE_P10.md  SMOKE_P11.md  SMOKE_P12.md  SMOKE_P13.md  SMOKE_P16.md  SMOKE_P17.md  SMOKE_P18.md  SMOKE_P19.md  SMOKE_P20.md  SMOKE_P4.md  SMOKE_P5.md  SMOKE_P6.md  SMOKE_P7.md  SMOKE_P8.md  TESTING.md  TRAINING_GUI.md  TRAIN_ENV.md  demo.md  dev.md  gpu_setup.md  map.md  offline_eval.md  toolpath.md
io/include/io/: EmbeddedModel.h
models/: strategy_v2.card.json  strategy_v2.onnx.model.json  strategy_v2.pt.model.json
models/test_run/: strategy_v0.onnx  strategy_v0.onnx.json  strategy_v0.onnx.model.json  strategy_v0.pt  strategy_v0.pt.model.json
render/: CMakeLists.txt
render/include/render/: CameraController.h  Model.h  Polyline.h
render/shaders/: flat.frag  flat.vert  heatmap.frag  heatmap.vert  polyline.frag  polyline.vert
render/src/: CameraController.cpp  Model.cpp
resources/: app.qrc  tools.json
samples/: demo_plate.stl  demo_plate_fanuc.nc  demo_plate_grbl.nc  demo_tab.stl  demo_tab_fanuc.nc  demo_tab_grbl.nc  sample_part.stl
scripts/: verify_env.ps1
sim/: CMakeLists.txt
sim/include/sim/: StockGrid.h
sim/src/: StockGrid.cpp
src/ai/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  IPathAI.h  ModelCard.cpp  ModelCard.h  ModelManager.cpp  ModelManager.h  OnnxAI.cpp  OnnxAI.h  StrategySerialization.cpp  StrategySerialization.h  TorchAI.cpp  TorchAI.h
src/app/: AiPreferencesDialog.cpp  AiPreferencesDialog.h  AiPreferencesDialog.ui  DiagnosticsDialog.cpp  DiagnosticsDialog.h  MainWindow.cpp  MainWindow.h  TrainingNewModelDialog.cpp  TrainingNewModelDialog.h  TrainingNewModelDialog.ui  TrainingSyntheticDataDialog.cpp  TrainingSyntheticDataDialog.h  TrainingSyntheticDataDialog.ui
src/common/: Tool.cpp  Tool.h  ToolLibrary.cpp  ToolLibrary.h  Units.cpp  Units.h
src/io/: CMakeLists.txt  ImportWorker.cpp  ImportWorker.h  ModelImporter.cpp  ModelImporter.h
src/render/: HeatmapOverlay.cpp  HeatmapOverlay.h  ModelViewerWidget.cpp  ModelViewerWidget.h  SimulationController.cpp  SimulationController.h  ToolpathOverlay.cpp  ToolpathOverlay.h
src/tests_core/: CMakeLists.txt  TestRegistry.h  TestsCore.cpp  TestsCore.h  basic_toolpath_tests.cpp  unit_system_tests.cpp
src/tp/: CMakeLists.txt  FanucPost.cpp  FanucPost.h  GCodeExporter.cpp  GCodeExporter.h  GCodePostBase.cpp  GCodePostBase.h  GRBLPost.cpp  GRBLPost.h  GenerateWorker.cpp  GenerateWorker.h  GougeChecker.cpp  GougeChecker.h  HeidenhainPost.cpp  HeidenhainPost.h  IPost.h  Machine.cpp  Machine.h  MarlinPost.cpp  MarlinPost.h  Stock.cpp  Stock.h  TemplateEngine.cpp  TemplateEngine.h  Toolpath.h  ToolpathGenerator.cpp  ToolpathGenerator.h  TriangleGrid.cpp  TriangleGrid.h
src/tp/heightfield/: HeightField.cpp  HeightField.h  UniformGrid.cpp  UniformGrid.h
src/tp/ocl/: OclAdapter.cpp  OclAdapter.h
src/tp/waterline/: ZSlicer.cpp  ZSlicer.h
src/train/: EnvManager.cpp  EnvManager.h  TrainingManager.cpp  TrainingManager.h
testdata/cad/: tiny_block.step
testdata/eval/smoke/: block_raster.json  block_raster.stl  pocket_waterline.json  pocket_waterline.stl
tests/: basic_sanity.cpp  feature_ai_doctest.cpp  gcode_exporter_smoke.cpp  headless_pipeline.cpp  heightfield_smoke.cpp  io_step_import.cpp  onnx_ai_smoke.cpp  path_safety_tests.cpp  post_arcfit_circle.cpp  post_arcfit_linear.cpp  post_arcfit_units.cpp  post_templates.cpp  stock_sim_plane.cpp  tp_entries_raster.cpp  tp_entries_waterline.cpp  tp_gouge_slope.cpp  tp_gouge_step.cpp  tp_gouge_step.cpp.bak  tp_props_geometry.cpp  tp_props_helpers.h  tp_triangle_grid.cpp  triangle_grid_bench.cpp  triangle_grid_bench.tmp  waterline_parallel_consistency.cpp  waterline_ring_smoke.cpp
tests/doctest/: doctest.h
tools/eval/: run_eval.py
train/: README.md  common.py  generate_synthetic.py  make_fixed_model.py  requirements.in  requirements.txt  train_strategy.py
